Updates caption for ecoulement typique

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -247,7 +247,7 @@ In particular, we show that extreme fluctuations mainly result from fluctuations
 \begin{figure}
   \centering
   \includegraphics[width=\linewidth]{ecoulement_typique/ecoulement_typique.png}
-  \caption{Typical temporal evolution of the drag acting on the square cylinder pictured in figure~\ref{fig:computational_domain}. The correlation time $\tau_c$ is defined further in this text and correspond to the typical fluctuation timescale of the drag.}
+  \caption{Vorticity dynamics corresponding to typical drag fluctuations over one correlation time unit $\tau_c$. Negative vorticity is generated along the bottom boundary, and advected away from the the obstacle by the mean flow.}
   \label{fig:typical_drag_signal}
 \end{figure}
 
