Updates return_time legend and figure

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -326,7 +326,7 @@ events.
 \begin{figure}
   \centering
   \includegraphics[width=.6\linewidth]{return_time/return_time.png}
-  \caption{Drag fluctuation amplitude as a function the corresponding return time. The return time $r(a)$ is the typical timescale of occurrence of a fluctuation of amplitude larger than $a$.}
+  \caption{Drag fluctuation amplitude as a function the corresponding return time. Here $f_d$ denotes the centered and reduced drag with $f_d=0$ and $\sigma = 1$.}
   \label{fig:return_time_instant}
 \end{figure}
 \subsection{Instantaneous drag}
