Updates legend for illustr_extrms_vorticity, illustr_density_streamlines and timeseries_extremes

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -363,19 +363,22 @@ In addition, figure~\ref{fig:pressure_ratio} hints that, the larger the fluctuat
 \begin{figure}
   \centering
   \includegraphics[width=.8\linewidth]{illustr_extrms_vorticity/illustr_extrms_vorticity.png}
-  \caption{\label{fig:top_4_events_vorticity} Vorticity field at $t=t^{\star}$ for the four highest drag fluctuations in the timeseries. The corresponding drag timeseries can be found in figure~\ref{fig:extremes_timeseries}.
-    The high value for the drag results from the formation of a strong negative (red) vortex inducing a pressure drop at the base of the obstacle. The formation of such a structure is aided by important vorticity production at the bottom boundary of the obstacle coupled with the influence of positive vorticity in the vicinity of the base.}
+  \caption{\label{fig:top_4_events_vorticity} Vorticity field at $t=t^{\star}$ for some of the highest drag fluctuations in the control timeseries.
+    The extreme value for the drag results from the concentration of vorticity in the vicinity of the base of the obstacle, causing a pressure drop.}
 \end{figure}
 
 
 \begin{figure}
   \centering
   \includegraphics[width=.5\linewidth]{illustr_density_streamlines/illustr_density_streamlines.png}
+  \label{density+streamlines}
+  \caption{Pressure field and velocity streamlines in the vicinity of the obstacle at $t=t^{\star}$. Becasue of the blocking vortex, vorticity produced along the top boundary of the obsatcle has no other choice but to accumulate at the base of the obstacle.}
 \end{figure}
 
 \begin{figure}
   \centering
-  \includegraphics[width=.5\linewidth]{timeseries_extremes/timeseries_extremes.png}
+  \includegraphics[width=.7\linewidth]{timeseries_extremes/timeseries_extremes.png}
+  \caption{Average drag timeseries in the vicinity of an extreme drag fluctuation at $t=t^{\star}$. The blue continuous line results from an average over the 104 extreme events sampled in the control run. This illustrates that extreme drag variations are very local in time, with a typical lifetime of one correlation time unit $\tau_c$.}
 \end{figure}
 
 \begin{figure}
