--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -520,6 +520,7 @@ In other words, generated trajectories are given a statistical weight, which kno
 \begin{figure}
   \centering
   \includegraphics[width=.7\linewidth]{illustr_AMS/figure_AMS}
+  \label{fig:illustr_AMS}
   \caption{Illustration of one selection-mutation step in the \ac{ams} algorithm for the computation of the probability that an observable $A:\mathbb{R}^d\to \mathbb{R}$  reaches values larger than $Q$ over a trajectory of duration $T_a$. The initial ensemble of blue trajectories is first generated. These trajectories are independant and can be simulated in parallel. On the basis of the respective maxima $Q_1$, $Q_2$ and $Q_3$, the trajectory with the lowest maximum is discarded from the ensemble (dashed blue line). Among the two remaining trajectories, trajectory 3 is chosen at random and copied until $Q_1$. It is then freely simulated from the branching poin to $T_a$. In case of deterministic dynamics, as samll perturbation is introduced at the branching. This procedure is typically iterated $J$ times, or until all trajectories go beyond a fixed threshold $Q$.}
 \end{figure}
 
@@ -572,19 +573,29 @@ For such complex dynamics however, there is no reasons for the drag itself to be
 Unfortunately, the choice of better score functions rely on a deep understanding of the physics of the rare events of interest, which is precisely what we are trying to achieve.
 
 % Commentaire figure instant_256_20
-
+\begin{figure}
+  \centering
+  \includegraphics[width=.7\linewidth]{AMS_drag_resampling/AMS_drag_resampling.png}
+    \caption{Maximum of the instantaneous drag along the resampled trajectories as a function of the corresponding computational cost $C_{TAMS}$. For these particular dynamics, the \ac{tams} is unable to efficiently sample rare trajectories associated to drag fluctuations higher than the largest fluctuation in the initial ensemble.}
+\end{figure}
 We apply the \ac{tams} with $N=256$ initial trajectories, with a duration $T_a = 20 \tau_c$.
 Similarly to figure~\ref{fig:comparaison_temps_de_retour}, figure~\ref{fig:instant_256_20} displays the maximum drag achieved by resampled trajectories.
-Figure~\ref{fig:instant_256_20} also shows the distribution of the maximum achieved drag for the $N$ \textit{initial} trajectories.
+In addition, figure~\ref{fig:instant_256_20} shows the distribution of the maximum achieved drag for the $N$ \textit{initial} trajectories.
 Over the first iterations of the algorithm, trajectories with the lowest maximum of the score function are discarded, and new trajectories with higher maximum are resampled.
 These maxima are depicted by the stars in figure~\ref{fig:instant_256_20}.
 However, one can see that resampled trajectories never exceeds the amplitude of the highest maximum in the initial set of trajectories.
 
 % Commentaire de la figure iter_181
-
-Figure~\ref{fig:instant_256_20} can be better understood by visualising the drag signals corresponding to the last resampled trajectories.
-Figure~\ref{fig:instant_256_20_b} displays the ensemble of trajectories after $181$ iterations of the \ac{tams} resampling procedure.
-Comparison with figure~\ref{fig:instant_256_20_b} suggests that, utimately, trajectories are resampled from the same initial trajectory.
+\begin{figure}
+  \centering
+  \includegraphics[width=.7\linewidth]{AMS_drag_trajectories/AMS_drag_trajectories.png}
+  \label{fig:AMS_drag_trajectories}
+  \caption{Ensemble of trajectories after $181$ iterations of the selection-mutation procedure.In this experiment, the \ac{tams} is used with the instantaneous drag $f_d$ as a score function. Trajectories have a duration $T_a = 5\tau_c$ and their number is $N_c = 32$.
+    The \ac{tams} fails to efficiently sample rare trajectories, because all trajectories are ultimately resampled from the trajectory displaying the highest maximum in the initial ensemble.}
+\end{figure}
+Figure~\ref{fig:AMS_drag_trajectories} can be better understood by visualising the drag signals corresponding to the last resampled trajectories.
+Figure~\ref{fig:AMS_drag_trajectories} displays the ensemble of trajectories after $181$ iterations of the \ac{tams} resampling procedure (see figure~\ref{fig:illustr_AMS}).
+One can see that, utimately, trajectories are resampled from one unique initial trajectory.
 This phenomenon can be explained as follows.
 Because the flow dynamics have a memory, it takes a certain time before a resampled trajectory separate from its parent.
 In our case, this memory originates from the deterministic nature of the dynamics, which implies that two trajectories starting from infinitesimally close starting points will overlap over a timescale called
@@ -621,22 +632,9 @@ However, such modification(s) of the resampling procedure must be implemented wi
 
 
 
-\begin{figure}
-  \centering
-  \includegraphics[width=.7\linewidth]{AMS_drag_resampling/AMS_drag_resampling.png}
-    \caption{Maximum of the instantaneous drag along the resampled trajectories, denoted by $\tilde{f}_d^{(j)}$, as a function of the corresponding computational cost $C_j$, defined in~\eqref{eq:comp_cost_iterations}. In both figures, the \ac{tams} is iterated until extinction. 
-    The solid black line indicates the typical fluctuation amplitude $a$ as a function of the corresponding  \textit{return time} $r(a)$. It is the typical timescale of occurrence of fluctuations above $a$. Furthermore, the square markers depict the maximum $\tilde{f}_{d,n}^{(0)},\,\, 1\leq n \leq N_c$ over the initial trajectories.
-    This figure illustrates that in both experiments the \ac{tams} does not improve the sampling of rare fluctuations. On can see that the maximum values among the resampled trajectories concentrates on values already sampled over the initial trajectories. Eventually, extinction is reached as the algorithm is unable to generate a fluctuation higher than the maximum fluctuation in the initial ensemble of trajectories.
-    This behaviour is illustrated in figure~\ref{fig:extinction_32_5} on the basis of the drag timeseries involved in the experiment of figure~\ref{fig:comparaison_ams_return_time_instant_a}.}
-\end{figure}
 
-\begin{figure}
-  \centering
-  \includegraphics[width=.7\linewidth]{AMS_drag_trajectories/AMS_drag_trajectories.png}
-    \caption{Visualisation of the drag timeseries corresponding to the set of trajectories in the ensemble, at different iterations along the algorithm. In this experiment, the \ac{tams} is used with the instantaneous drag $f_d$ as a score function. Trajectories have a duration $T_a = 5\tau_c$ and their number is $N_c = 32$.
-    One can see that, as the number of iterations increases, the number of independent resampled trajectories drastically decreases until extinction at iteration $181$. The timeseries corresponding to the two initial trajectories exhibiting the highest fluctuations are displayed in colour. In all four figures, colour is inherited from the parent trajectory. It illustrates that the two strongest initial trajectories quickly become predominant in the ensemble, as the other are discarded.
-    As can be seen in figure~\ref{fig:subfigc}, trajectories only separate well after the maximum is reached. Therefore, resampling the blue trajectories based on the red trajectories can only change the overall maximum by a very small amount. Consequently, blue trajectories are discarded one after the other, each time resampled into another instance of the red trajectory. This new instance has roughly the same maximum as the others.}
-\end{figure}
+
+
 
 \subsection{Extreme time-averaged drag forces with the \acl{gktl} algorithm}
 \label{sec:gktl}
